     fe80:.*               fe80::/16

   Additionally, each line of the node-position file may now include
   multiple such node-matching patterns (separated by spaces and/or
   commas as with the central node ring setting), so a single line
   might look like:

     *.mydomain.com, 10.0.0.0/24 3

   (to put all nodes matching the given domain or CIDR range into
   column 3).


   Changes summary:
     * New option to use c-ares for DNS resolution.
     * Multiple node/subnets and glob syntax now supported for central
       node ring.
     * Node-matching syntax for '-P' flag's file now uses CIDR
       notation and hostname-globbing instead of regexes.
     * Multiple patterns can now be given on a single line of the
       node-position ('-P') file.
     * The columnar-layout ('-P') code has been changed to re-adjust
       the spacing of nodes within a column when the number of nodes
       decreases.  The 10-column limit has also been removed.
     * The background-image feature introduced in 0.9.14 can now be
       turned off via a preference check-box.
     * The background of the protocol legend is now black so that
       lighter colors (e.g. yellow) are more readable.
     * There is now an option to display packet-capture statistics
       from libpcap in the main window (hover the mouse over them for
       an explanation in the status bar).
     * The show/hide state of the toolbar, protocol legend, and status
       bar are now preserved along with other preferences in the
       user's config file.


  Overview of changes in EtherApe 0.9.14 (Saturday February 06, 2016):
   EtherApe now users the system /etc/services file instead of its own.
   While this change make some customizations a bit harder, it guarantees an
   up-to-date services file.
   Note to packagers: /etc/etherape is not needed anymore.

   Central node option now undestands CIDR notation, allowing for a central
   ring of nodes, thanks to Zev Weiss.