@@ -34,7 +34,9 @@ inputfile ] [
 .B -s
 ] [
 .B --signal-export
-outfile ]
+outfile ] [
+.B -Z
+user ]
 
 .SH DESCRIPTION
 .PP
@@ -96,9 +98,13 @@ Deprecated.
 .TP
 .BR "--signal-export " "<export file name>"
 if specified, enables signal USR1 handling. On receiving USR1, EtherApe will
-dump its state to the named XML file. 
+dump its state to the named XML file.
 
 Beware! the file will be overwritten without asking!
+.TP
+.BR "-Z, --relinquish-privileges <user>"
+run everything but privileged packet-capture operations under the user
+ID and group ID of the given user.
 .TP
 .BR "-?, --help"
 show a brief help message
